load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_library(
    name = "game",
    hdrs = ["game.h"],
    srcs = ["game.cpp"],
    deps = [
        "@com_github_google_glog//:glog",
    ],
)

cc_test(
    name = "game_test",
    srcs = ["game_test.cpp"],
    deps = [
        ":game",
        "@com_github_google_glog//:glog",
        "@com_github_google_gtest//:gtest_main",
    ],
)
