load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_library(
    name = "util",
    hdrs = ["util.h"],
    srcs = ["util.cpp"],
)

cc_test(
    name = "util_test",
    srcs = ["util_test.cpp"],
    deps = [
        ":util",
        "@com_github_google_gtest//:gtest_main",
    ],
)

cc_library(
    name = "game",
    hdrs = ["game.h"],
    srcs = ["game.cpp"],
    deps = [
        ":util",
        "@com_github_google_glog//:glog",
    ],
)

cc_test(
    name = "game_test",
    srcs = ["game_test.cpp"],
    deps = [
        ":game",
        "@com_github_google_glog//:glog",
        "@com_github_google_gtest//:gtest_main",
    ],
)

cc_library(
    name = "ai_minimax",
    hdrs = ["ai_minimax.h"],
    srcs = ["ai_minimax.cpp"],
    deps = [
      ":util",
      ":game",
    ],
)
